--- a/public/scss/utilities/_mixins.scss
+++ b/public/scss/utilities/_mixins.scss
@@ -72,30 +72,33 @@
 
   }
 
-  @else if $break == "split-sm" {
+  /*===== If the key doesn't exist in the map =====*/
+   @else {
+    @error "Whoops! No value could be retrieved for \`#{$break}\`."
+  }
+
+}
+
+@mixin mq($split) {
+  @if $split == "split-sm" {
     @media (min-width: $spltpnt-sm) and (max-width: $spltpnt-md) {
       @content;
     }
 
   }
 
-  @else if $break == "split-md" {
+  @else if $split == "split-md" {
     @media (min-width: $spltpnt-md + 1) {
       @content;
     }
 
   }
 
-  @else if $break == "split-lg" {
+  @else if $split == "split-lg" {
     @media (min-width: $spltpnt-lg) {
       @content;
     }
 
-  }
-
-  /*===== If the key doesn't exist in the map =====*/
-   @else {
-    @error "Whoops! No value could be retrieved for \`#{$break}\`."
   }
 
 }
