--- a/public/scss/modules/_index.scss
+++ b/public/scss/modules/_index.scss
@@ -2,6 +2,9 @@
 
 /**** MODULES MANIFEST
 *=======================================================================*/
+/*===== Import about =====*/
+@import "about";
+
 /*===== Import buttons =====*/
 @import "buttons";
 
@@ -43,3 +46,6 @@
 
 /*===== Import sad browser =====*/
 @import "sad_browser";
+
+/*===== Import slideshow =====*/
+@import "slideshow";
