--- a/public/scss/modules/_nav.scss
+++ b/public/scss/modules/_nav.scss
@@ -12,7 +12,7 @@
 
     a {
       @extend %nav-item-link;
-      color: palette(white);
+      color: palette(white, base);
 
       &:hover {
         @extend %nav-item-on;
