--- a/public/css/main.css
+++ b/public/css/main.css
@@ -270,7 +270,7 @@ code, kbd, pre, samp {
  * 2. Correct font properties not being inherited.
  * 3. Address margins set differently in Firefox 4+, Safari, and Chrome.
  */
-button, input, optgroup, select, textarea {
+button, label, input, optgroup, select, textarea {
   color: inherit;
   /* 1 */
   font: inherit;
@@ -422,11 +422,12 @@ td, th {
   box-sizing: border-box; }
 
 /*===== Body style =====*/
-body {
+html, body {
   color: #797E83;
   font-size: 16px;
   font-family: Garamond, Baskerville, Prata, "Baskerville Old Face", "Times New Roman", "Helvetica Neue", Helvetica, Arial, sans-serif, serif;
-  line-height: 1.5; }
+  line-height: 1.5;
+  overflow-x: hidden; }
 
 /*===== Text style =====*/
 h4 {
@@ -594,10 +595,32 @@ footer {
 /*_panel.scss*/
 /**** PANEL LAYOUT
 *=======================================================================*/
+/*===== Import scrollbar layout =====*/
+/*_scroll.scss*/
+/**** SCROLLBAR
+*=======================================================================*/
+/*===== Scrollbar features =====*/
+::-webkit-scrollbar {
+  width: 0.25rem;
+  background: rgba(11, 11, 11, 0.1); }
+
+::-webkit-scrollbar-thumb {
+  background: rgba(26, 32, 63, 0.9); }
+
+::-webkit-scrollbar-track {
+  background: none; }
+
 /*===== Import modules =====*/
 /*_index.scss*/
 /**** MODULES MANIFEST
 *=======================================================================*/
+/*===== Import about =====*/
+/*_about.scss*/
+/**** ABOUT SECTION
+*=======================================================================*/
+#about {
+  text-align: center; }
+
 /*===== Import buttons =====*/
 /*_buttons.scss*/
 /**** BUTTONS
@@ -635,16 +658,14 @@ footer {
 .btn--dix {
   background-color: #4682B4; }
 
-.swtch {
+[class^="btn--"] {
+  padding: 0.9375rem 1.875rem;
+  margin-bottom: 0.71429rem;
   width: auto;
   display: inline-block; }
-  @media (min-width: 1px) and (max-width: 768px) {
-    .swtch {
-      width: 100%;
-      display: block; } }
-
-[class^="btn--"] {
-  margin-bottom: 0.71429rem; }
+  @media (min-width: 769px) {
+    [class^="btn--"] {
+      margin: auto 0.9375rem; } }
   @media (min-width: 1px) and (max-width: 768px) {
     [class^="btn--"] {
       width: 100%;
@@ -660,7 +681,8 @@ footer {
   background-image: -moz-linear-gradient(top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../public/images/ali/banner-home.jpg");
   background-image: -ms-linear-gradient(top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../public/images/ali/banner-home.jpg");
   background-image: -o-linear-gradient(top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../public/images/ali/banner-home.jpg");
-  background-image: linear-gradient(top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../public/images/ali/banner-home.jpg"); }
+  background-image: linear-gradient(top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../public/images/ali/banner-home.jpg");
+  /*===== Banner footer screen =====*/ }
   .case #footer {
     background-color: rgba(26, 32, 63, 0.9); }
 
@@ -696,9 +718,22 @@ footer {
 /*_extends.scss*/
 /**** BASE STYLE EXTENSTION PLACEHOLDER SELECTORS
 *=======================================================================*/
+/*===== Arrow (slideshow) features =====*/
+.side-scroller .arrow {
+  position: absolute;
+  padding: 0.64375rem;
+  margin: 0.15625rem;
+  box-shadow: 0.125rem -0.125rem 0 0.0625rem #8e9297;
+  cursor: pointer; }
+  .side-scroller .arrow:hover {
+    box-shadow: 0.125rem -0.125rem 0 0.0625rem #c0c3c5; }
+  .side-scroller .arrow:before {
+    content: '';
+    position: absolute; }
+
 /*===== Button features =====*/
-.swtch, [class^="btn--"], .form__btn {
-  padding: 12px 24px;
+[class^="btn--"], .form__btn {
+  padding: 0.75rem 1.5rem;
   border: 0;
   border-radius: 0.4em;
   color: #FFFFFF;
@@ -707,10 +742,11 @@ footer {
   font-family: "Open Sans", Arial, sans-serif, serif;
   font-weight: 500;
   transition: opacity 0.3s; }
-  .swtch:hover, [class^="btn--"]:hover, .form__btn:hover {
-    opacity: .73; }
-  .swtch:active, [class^="btn--"]:active, .form__btn:active {
-    opacity: initial; }
+
+[class^="btn--"]:hover, .dim:hover {
+  opacity: .67; }
+[class^="btn--"]:active, .dim:active {
+  opacity: initial; }
 
 /*===== Case features =====*/
 .case {
@@ -748,14 +784,6 @@ h3, .headline-tertiary, .headline-tertiary--grouped {
   font-weight: 600;
   font-size: 1.125rem; }
 
-/*===== Paragraph features =====*/
-p, .para-primary, .para-primary--grouped {
-  color: #FFFFFF;
-  letter-spacing: 1px;
-  font-family: "Open Sans", Arial, sans-serif, serif;
-  font-weight: 100;
-  line-height: 1.5; }
-
 /*===== Icon features =====*/
 .icn--nav-toggle, .icn--close {
   line-height: 0;
@@ -787,12 +815,37 @@ p, .para-primary, .para-primary--grouped {
 /*===== Menu link features =====*/
 .menu__link, .menu__link--end {
   display: block;
-  padding-top: em(16px);
+  padding-top: 1rem;
   padding-bottom: 1rem;
   color: #FFFFFF;
   text-align: center;
-  text-shadow: 0 1px rgba(11, 11, 11, 0.2);
+  text-shadow: 0 0.0625rem rgba(11, 11, 11, 0.2);
   font-size: 1.125rem; }
+
+/*===== Paragraph features =====*/
+p, .para-primary, .para-primary--grouped {
+  color: #FFFFFF;
+  letter-spacing: 1px;
+  font-family: "Open Sans", Arial, sans-serif, serif;
+  font-weight: 100;
+  line-height: 1.5; }
+
+/*===== Side-scroller features =====*/
+.side-scroller {
+  padding: 0 0.0625rem;
+  position: absolute;
+  top: -6.5%;
+  width: 100%;
+  z-index: 100; }
+
+/*===== Slideshow scroller features =====*/
+.overscroll {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  line-height: normal;
+  vertical-align: top;
+  white-space: normal; }
 
 /*===== Import form elements =====*/
 /*_forms.scss*/
@@ -854,13 +907,13 @@ p, .para-primary, .para-primary--grouped {
   .icn--nav-toggle {
     width: 25px;
     height: 17px;
-    border-top: solid 3px #999da1;
-    border-bottom: solid 3px #999da1;
+    border-top: solid 3px #8e9297;
+    border-bottom: solid 3px #8e9297;
     position: relative; }
     .icn--nav-toggle:before {
       height: 3px;
       width: 25px;
-      background: #999da1;
+      background: #8e9297;
       top: 4px; }
   .icn--close {
     background-image: url("../images/icn-close.svg");
@@ -878,7 +931,7 @@ p, .para-primary, .para-primary--grouped {
 *=======================================================================*/
 .img--wrap {
   border: 1px solid #797E83;
-  background-color: #999da1;
+  background-color: #8e9297;
   padding: 0.125rem; }
 .img--avatar {
   display: block;
@@ -973,6 +1026,78 @@ p, .para-primary, .para-primary--grouped {
   background: #CCCCCC;
   color: #000000;
   padding: 0.2em 0; }
+
+/*===== Import slideshow =====*/
+/*_slideshow.scss*/
+/**** SLIDESHOW
+*=======================================================================*/
+#slideshow {
+  display: inline-block;
+  position: relative;
+  margin-bottom: 0.9375rem; }
+  #slideshow > input {
+    display: none; }
+    #slideshow > input:nth-of-type(1):checked ~ ul li:first-of-type {
+      margin-left: 0%; }
+    #slideshow > input:nth-of-type(2):checked ~ ul li:first-of-type {
+      margin-left: -100.7%; }
+    #slideshow > input:nth-of-type(3):checked ~ ul li:first-of-type {
+      margin-left: -200.7%; }
+    #slideshow > input:nth-of-type(4):checked ~ ul li:first-of-type {
+      margin-left: -300.7%; }
+    #slideshow > input:nth-of-type(5):checked ~ ul li:first-of-type {
+      margin-left: -400.7%; }
+    #slideshow > input:nth-of-type(6):checked ~ ul li:first-of-type {
+      margin-left: -500.7%; }
+  #slideshow ul {
+    position: relative;
+    height: 31.25rem;
+    line-height: 0;
+    background-color: #3C1F76;
+    border-radius: 0.4em;
+    margin: 0 auto;
+    padding: 0;
+    overflow: hidden;
+    white-space: nowrap; }
+  #slideshow.looper > input:first-of-type:checked ~ .side-scroller label.jump-end, #slideshow.looper input:nth-of-type(1):checked ~ .side-scroller > label:nth-of-type(0), #slideshow.looper input:nth-of-type(2):checked ~ .side-scroller > label:nth-of-type(1), #slideshow.looper input:nth-of-type(3):checked ~ .side-scroller > label:nth-of-type(2), #slideshow.looper input:nth-of-type(4):checked ~ .side-scroller > label:nth-of-type(3), #slideshow.looper input:nth-of-type(5):checked ~ .side-scroller > label:nth-of-type(4), #slideshow.looper input:nth-of-type(6):checked ~ .side-scroller > label:nth-of-type(5), #slideshow.looper input:nth-of-type(7):checked ~ .side-scroller > label:nth-of-type(6) {
+    display: block;
+    right: auto;
+    left: 2.5%;
+    -webkit-transform: rotate(225deg);
+    -moz-transform: rotate(225deg);
+    -ms-transform: rotate(225deg);
+    -o-transform: rotate(225deg);
+    transform: rotate(225deg); }
+  #slideshow.looper > input:last-of-type:checked ~ .side-scroller label.jump-start, #slideshow.looper input:nth-of-type(1):checked ~ .side-scroller > label:nth-of-type(2), #slideshow.looper input:nth-of-type(2):checked ~ .side-scroller > label:nth-of-type(3), #slideshow.looper input:nth-of-type(3):checked ~ .side-scroller > label:nth-of-type(4), #slideshow.looper input:nth-of-type(4):checked ~ .side-scroller > label:nth-of-type(5), #slideshow.looper input:nth-of-type(5):checked ~ .side-scroller > label:nth-of-type(6), #slideshow.looper input:nth-of-type(6):checked ~ .side-scroller > label:nth-of-type(7) {
+    display: block;
+    right: 2.5%;
+    left: auto;
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg); }
+
+.side-scroller {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none; }
+  .side-scroller .arrow {
+    display: none; }
+
+.overscroll {
+  display: inline-block;
+  overflow: hidden;
+  overflow-y: scroll;
+  -webkit-transition: all 1s cubic-bezier(0.4, 1.3, 0.65, 1);
+  -moz-transition: all 1s cubic-bezier(0.4, 1.3, 0.65, 1);
+  -o-transition: all 1s ease-out;
+  transition: all 1s cubic-bezier(0.4, 1.3, 0.65, 1); }
+  .overscroll p {
+    padding: 0.9375rem; }
 
 /*===== Import states =====*/
 /*_index.scss*/
