--- a/public/scss/base/_normalize.scss
+++ b/public/scss/base/_normalize.scss
@@ -230,7 +230,7 @@ code, kbd, pre, samp {
  * 3. Address margins set differently in Firefox 4+, Safari, and Chrome.
  */
 
-button, input, optgroup, select, textarea {
+button, label, input, optgroup, select, textarea {
   color: inherit; /* 1 */
   font: inherit; /* 2 */
   margin: 0; /* 3 */
