--- a/public/scss/modules/_case.scss
+++ b/public/scss/modules/_case.scss
@@ -11,6 +11,7 @@
   background-image: linear-gradient(top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../public/images/ali/banner-home.jpg");
     @extend %case-xtn;
 
+/*===== Banner footer screen =====*/
   #footer {
     background-color: rgba(26, 32, 63, 0.9);
   }
